whole pawn logic, undo moves, enPeasant, upgrade, knightmovesPre

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="simple chess game">
     <meta name="keywords" content="HTML,CSS,JavaScript">
     <meta name="author" content="Robert Swoboda">
-    <link rel="icon" href="./favicon.ico">
+    <link rel="icon" href="./favicon.webp">
     <link rel="stylesheet" href="style.css" type="text/css">
     <title>Chess</title>
 </head>
@@ -87,10 +87,12 @@
 
         <div class="left-panel"></div>
         <div class="bottom-panel"></div>
+        <div class="upgrade hidden"></div>
     </div>
     <div id="actions">
         <button class="action-button" id="change-sides">Change sides</button>
         <button class="action-button" id="reset">Reset</button>
+        <button class="action-button" id="undo-move">Undo move</button>
     </div>
     <script src="app.js" defer type="module"></script>
 </body>
