--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
         <div class="left-panel"></div>
         <div class="bottom-panel"></div>
         <div class="upgrade hidden"></div>
+        <div class="winner-backdrop hidden"><div class="winner"></div></div>
     </div>
     <div id="actions">
         <button class="action-button" id="change-sides">Change sides</button>
